Page inicial ends

--- a/MDN/index.html
+++ b/MDN/index.html
@@ -1,9 +1,35 @@
-<!-- O p é elemento de bloco e o strong e em são inlines tags. -->
-<p>Meu gato é <strong>muito</strong> <em>mal-humorado.</em></p>
+<!DOCTYPE html>
+<html lang="pt-br">
 
-<em>Primeiro</em><em>Segundo</em><em>Terceiro</em>
-<p>Quarto</p>
-<p>Quinto</p>
-<p>Sexto</p>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
 
-<img src="http://source.unsplash.com/random" alt="randomImg" width="500" height="500">
+<body>
+    <h1>&lt;h1&gt;Meu titulo &lt;/h1&gt;</h1>
+    <!-- O p é elemento de bloco e o strong e em são inlines tags. -->
+    <p>Meu gato é <strong>muito</strong> <em>mal-humorado.</em></p>
+
+    <em>Primeiro</em><em>Segundo</em><em>Terceiro</em>
+    <p>Quarto</p>
+    <p>Quinto</p>
+    <p>Sexto</p>
+
+    <img src="http://source.unsplash.com/random" alt="randomImg" width="500" height="500" />
+
+    <p class="editor-note">Esse gato tá de sacanagem</p>
+
+    <p>Um <a href="http://developer.mozilla.org" title="developer.mozilla.org" target="_blank">link</a> para o meu site
+        favorito.
+    </p>
+    <label for="desativado">Desativado</label>
+    <input id="desativado" type="text" disabled="disabled">
+
+    <label for="ativado">Ativado</label>
+    <input id="ativado" type="text">
+</body>
+
+</html>
