Project link ends

--- a/MDN/project3.html
+++ b/MDN/project3.html
@@ -10,21 +10,29 @@
 
 <body>
     <!-- Utilizando HTML semântico para criar uma receita -->
+
+    <!-- Título da página -->
     <h1>Receitas do Tiago</h1>
     <p>Um pequeno blog em que coloco minhas receitas que acabei desenvolvendo</p>
 
+    <!-- Nome da receita -->
     <h2>Pão amanteigado</h2>
 
+    <!-- Inicio da seção ingredientes -->
     <h3>Ingredientes:</h3>
 
+    <!-- Lista dos ingredientes -->
     <ul>
         <li>Pão</li>
         <li>Manteiga</li>
         <li>Frigideira</li>
     </ul>
+    <!-- Fim da seção ingredientes -->
 
+    <!-- Início da seção de preparo -->
     <h3>Modo de preparo:</h3>
 
+    <!-- Lista do passo a passo -->
     <ol>
         <li>Coloque a frigideira em fogo baixo</li>
         <li>Aguarde a frigideira ficar um pouco quente</li>
@@ -34,12 +42,15 @@
         <li>Vire o pão e repita o processo anteriro com o outro lado</li>
         <li>Desligue o fogo e sirva-se</li>
     </ol>
+    <!-- Fim da seção de preparo -->
 
+    <!-- Início da seção de dicas -->
     <h3>Dicas:</h3>
     <p>Coloque alguma mistura dentro do pão para ficar algo mais saboroso,
         por exemplo: Coloque algum <em>Empanado</em>, com isso realmente o seu pão amanteigado ficará <strong>muiitoo
             gostoso!</strong>
     </p>
+    <!-- Fim da seção de dicas -->
 </body>
 
 </html>
